CSS Code indexed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
   /*padding*/
     --padd:0% 4%;
   /*Tramsform skew*/
-   --skew:skew(0deg, 5deg);
+    --skew:skew(0deg, 5deg);
 }
 
 body{
@@ -18,284 +18,285 @@ body{
 }
 
 /*Nav*/
-.menu {
-  font-family: 'IBM Plex Sans', sans-serif;
-  display: block;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-  background-color: white;
-  width: 100%;
-}
+  .menu {
+    font-family: 'IBM Plex Sans', sans-serif;
+    display: block;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
+    width: 100%;
+  }
 
-.menu input[type="checkbox"], .menu .fa-bars, .menu .fa-times {
-  position: absolute;  
-  right: 4%;
-  top: 5%;
-  width: 30px;
-  height: 30px;  
-}
+  .menu input[type="checkbox"], .menu .fa-bars, .menu .fa-times {
+    position: absolute;  
+    right: 4%;
+    top: 5%;
+    width: 30px;
+    height: 30px;  
+  }
 
-.head{ 
-  display: block;
-  padding: 1% 4%;
-}
+  .head{ 
+    display: block;
+    padding: 1% 4%;
+  }
 
-.logo{
-  width: 30px;
-  height: 30px;
-}
+  .logo{
+    width: 30px;
+    height: 30px;
+  }
 
 /*Burguer Menu*/
-.menu .fa-bars, .menu .fa-times {
-  font-size: 30px;
-  pointer-events: none;
-}
+  .menu .fa-bars, .menu .fa-times {
+    font-size: 30px;
+    pointer-events: none;
+  }
  
-.menu input[type="checkbox"] {
-  opacity: 0; 
-}   
-.menu nav {
-  display: none;
-}
+  .menu input[type="checkbox"] {
+    opacity: 0; 
+  }   
+  .menu nav {
+    display: none;
+  }
  
-.menu input:checked ~ nav {
-  display: block;
-}
+  .menu input:checked ~ nav {
+    display: block;
+  }
  
-.menu input:checked ~ .fa-bars {
-  display: none;
-}
+  .menu input:checked ~ .fa-bars {
+    display: none;
+  }
  
-.menu input:not(:checked) ~ .fa-times {
-  display: none;
-}
-/*End BurguerMenu*/
+  .menu input:not(:checked) ~ .fa-times {
+    display: none;
+  }
+  /*End BurguerMenu*/
 
-.item{
-  width: 100%;
-  background-color: var(--color);
-}
+  .item{
+    width: 100%;
+    background-color: var(--color);
+  }
 
-.a {
-  display: block;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  padding:1% 0%;
-}
+  .a {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    padding:1% 0%;
+  }
 
-.a:hover {
-  color:#00F3BB;
-  text-decoration: line-through;
-}
+  .a:hover {
+    color:#00F3BB;
+    text-decoration: line-through;
+  }
 
-.a:active {
-  color:gray;
-  text-decoration: line-through;
-}
+  .a:active {
+    color:gray;
+    text-decoration: line-through;
+  }
 
 /*Body*/
-.cuerpo{
-  display: block;
-  width: 100%;
-}
+  .cuerpo{
+    display: block;
+    width: 100%;
+  }
 /*Begin*/
-.begin{
-  padding:var(--padd);
-}
+  .begin{
+    padding:var(--padd);
+  }
 
-h1{
-  width: 200px;
-  font-family: 'IBM Plex Sans', sans-serif;
-}
+  h1{
+    width: 200px;
+    font-family: 'IBM Plex Sans', sans-serif;
+  }
 
-span{
-  text-decoration: line-through;
-}
+  span{
+    text-decoration: line-through;
+  }
 
-p{
-  font-family: 'IBM Plex Mono', monospace;
-}
+  p{
+    font-family: 'IBM Plex Mono', monospace;
+  }
 
-.p1{
-  display: block;
-  text-justify: auto;
-}
-.p2{
-  display: none;
-}
+  .p1{
+    display: block;
+    text-justify: auto;
+  }
 
-button{
-  font-family: 'IBM Plex Mono', monospace;
-  margin-top: 4%;
-  margin-bottom: 6%;
-  border-style: none;
-  background-color:  #00F3BB;
-  width: 220px;
-  height: 40px;
-}
+  .p2{
+    display: none;
+  }
 
-button:hover{
-  background-image: var(--hover);
-}
+  button{
+    font-family: 'IBM Plex Mono', monospace;
+    margin-top: 4%;
+    margin-bottom: 6%;
+    border-style: none;
+    background-color:  #00F3BB;
+    width: 220px;
+    height: 40px;
+  }
+
+  button:hover{
+    background-image: var(--hover);
+  }
 
 /*Episodes*/
-.episodios{
-  position: static;
-  transform: skew(0deg, -5deg);
-  padding: var(--padd);
-  background-color: var(--color);
-  padding-top: 5%;
-  padding-bottom: 15%;
-}
+  .episodios{
+    position: static;
+    transform: skew(0deg, -5deg);
+    padding: var(--padd);
+    background-color: var(--color);
+    padding-top: 5%;
+    padding-bottom: 15%;
+  }
 
-h2{
-  font-family: 'IBM Plex Sans', sans-serif;
-}
+  h2{
+    font-family: 'IBM Plex Sans', sans-serif;
+  }
 
-.h2{
-  transform: var(--skew);
-  padding-top: 3%;
-  color: white;
-}
+  .h2{
+    transform: var(--skew);
+    padding-top: 3%;
+    color: white;
+  }
 
-.epi{
-  transform: var(--skew);
-  margin-bottom: 5%;
-}
+  .epi{
+    transform: var(--skew);
+    margin-bottom: 5%;
+  }
 
-.figure{
-  margin: 0%;
-  margin-top: 1%;
-}
+  .figure{
+    margin: 0%;
+    margin-top: 1%;
+  }
 
 /*Us*/
-.nosotros{
-  padding: var(--padd);
-  display: flex;
-  flex-direction: column;
-  text-align: justify;
-  position: relative;
-  top: -80px;
-}
+  .nosotros{
+    padding: var(--padd);
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    position: relative;
+    top: -80px;
+  }
 
-.phonei{
-  width: 100%;
-}
+  .phonei{
+    width: 100%;
+  }
 
-.tit{
-  color: black;
-  width: 140px;
-  text-align: left;
-}
+  .tit{
+    color: black;
+    width: 140px;
+    text-align: left;
+  }
 
-.nos{
-  text-align: left;
-}
+  .nos{
+    text-align: left;
+  }
 
 /*Guests*/
-.entrevistas{
-  display: inline-block;
-  margin-top: -20%;
-}
+  .entrevistas{
+    display: inline-block;
+    margin-top: -20%;
+  }
 
-.tit1{
-  margin: 3% 4%;
-  width: 150px;
-  color: black;
-}
+  .tit1{
+    margin: 3% 4%;
+    width: 150px;
+    color: black;
+  }
 
-.invitados{
-  font-size: 0px;
-  line-height: 0px;
-}
+  .invitados{
+    font-size: 0px;
+    line-height: 0px;
+  }
 
-.inv{
-  display: block;
-  width: 100%;
-  margin: 0px;
-}
+  .inv{
+    display: block;
+    width: 100%;
+    margin: 0px;
+  }
 
 /*Topics*/
-.topicos{
-  display: flex;
-  flex-direction: column;
-}
+  .topicos{
+    display: flex;
+    flex-direction: column;
+  }
 
-.tit3{
-  color: black;
-  margin: 3% 4%;
-  width: 200px;
-}
+  .tit3{
+    color: black;
+    margin: 3% 4%;
+    width: 200px;
+  }
 
-.topics{
-  margin: 2% 4%;
-  display: flex;
-  flex-direction: column;
-}
+  .topics{
+    margin: 2% 4%;
+    display: flex;
+    flex-direction: column;
+  }
 
-.topic{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  text-align: center;
-  padding: 2%;
-}
+  .topic{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    padding: 2%;
+  }
 
-h3{
-  font-family: 'IBM Plex Mono', monospace;
-}
+  h3{
+    font-family: 'IBM Plex Mono', monospace;
+  }
 
-/*Foot*/
-.foot{
-  margin-top: 1%;
-  transform: skewy(-5deg);
-  background-color: var(--color);
-  position: relative;
-  display: block;
-}
+/*News*/
+  .foot{
+    margin-top: 1%;
+    transform: skewy(-5deg);
+    background-color: var(--color);
+    position: relative;
+    display: block;
+  }
 
-.novedades{
-  transform: var(--skew);
-  text-align: center;
-  padding: 3% 4% 3% 4%;
-}
+  .novedades{
+    transform: var(--skew);
+    text-align: center;     
+    padding: 3% 4% 3% 4%;
+  }
 
-.nove{
-  margin: auto;
-  width: 200px;
-  color: white;
-}
-
+  .nove{
+    margin: auto;
+    width: 200px;
+    color: white; 
+  }
 
 /*Footer*/
-footer {
-  background-color: white;
-  text-align: center;
-  position:absolute;
-  margin-top: -5%;
-  width: 100%;
-}
 
-.copy{
-  width: 100%;
-}
+  footer {
+    background-color: white;
+    text-align: center;
+    position:absolute;
+    margin-top: -5%;
+    width: 100%;
+  }
 
-.rede{
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 2%;
-}
+  .copy{
+    width: 100%;
+  }
 
-.aa{
-  width: 5%;
-  display: inline-block;
-}
+  .rede{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 2%;
+  }
 
-.fab{
-  color: #060A24 ;
-}
+  .aa{
+    width: 5%;
+    display: inline-block;
+  }
+
+  .fab{
+    color: #060A24 ;
+  }
 
