--- a/styles/desktopstyles.css
+++ b/styles/desktopstyles.css
@@ -1,6 +1,6 @@
 @media (min-width: 901px) {
   /*Nav*/
-    .menu {
+    header {
       width: 100%;
       display: block;
     }
@@ -13,17 +13,17 @@
 
   /*Burguer Menu*/
   
-    .menu input:checked ~ nav {
+    header input:checked ~ nav {
       display: inline-block;
     }
   
     input{
       display: none;
     }
-    .menu .fa-bars, .menu .fa-times {
+    header .fa-bars, header .fa-times {
       display: none;
     }
-    .menu nav{
+    header nav{
       display: inline-block;
       width: 45%;
     }
