Restructuring HTML, Change div .cuerpo for main and change location for div foot and  change name for News, on the other hand this element goes inside the main

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,7 @@ body{
   }
 
 /*Body*/
-  .cuerpo{
+  main{
     display: block;
     width: 100%;
   }
@@ -249,7 +249,7 @@ body{
   }
 
 /*News*/
-  .foot{
+  .news{
     margin-top: 1%;
     transform: skewy(-5deg);
     background-color: var(--color);
