--- a/styles/desktopstyles.css
+++ b/styles/desktopstyles.css
@@ -1,5 +1,5 @@
 @media (min-width: 901px) {
-  /*Nav*/
+  /*----  Header  -----------------------------------------------------------*/
     header {
       width: 100%;
       display: block;
@@ -11,7 +11,7 @@
       vertical-align: middle;
     }
 
-  /*Burguer Menu*/
+  /*----  Burguer Menu  -----------------------------------------------------------*/
   
     header input:checked ~ nav {
       display: inline-block;
@@ -27,7 +27,7 @@
       display: inline-block;
       width: 45%;
     }
-    /*End BurguerMenu*/
+    /*----  End BurguerMenu  ----*/
 
     .item{
       width: 24%;
@@ -39,7 +39,7 @@
       background-color: white;
     }
   
-  /*Begin*/
+  /*----  Main  -----------------------------------------------------------*/
     .begin{
       margin-top: 3%;
       padding:1% 10%;
@@ -56,9 +56,9 @@
       width: 600px;
     }
   
-  /*Episodes*/
+  /*----  Episodes  ----*/
   
-    .episodios{
+    .episodes{
       display: flex;
       flex-direction: column;
       padding: 0% 5%;
@@ -72,7 +72,7 @@
       color: white;
     }
   
-    .epi{
+    .episode{
       display: flex;
       flex-direction: row;
       flex-wrap:wrap;
@@ -83,8 +83,8 @@
       padding: 0% 1%;
     }
   
-  /*Us*/
-    .nosotros{
+  /*----  Us  ----*/
+    .us{
       flex-direction: row;
       padding: 0% 12%;
       top: -150px;
@@ -94,7 +94,7 @@
       width: 50%;
     }
   
-    .nosot{
+    .wherefrom{
       padding-top: 20%;
       padding-bottom: 20%;
       width: 50%;
@@ -104,28 +104,28 @@
       width: 80%;
     }
   
-    .tit{
+    .title{
       width: 300px;
     }
   
-    .nos{
+    .about{
       padding: 0% 5%;
     }
   
-  /*Guests*/
+  /*----  Guests  ----*/
 
-    .tit1{
+    .title1{
       width: 85%;
     }
     
-    .inv{
+    .guest{
       display: inline-block;
       width: 33.33%
     }
   
-  /*Topics*/
+  /*----  Topics  ----*/
   
-    .tit3{
+    .title3{
       width: 85%;
     }
   
@@ -137,17 +137,17 @@
       width: 25%;
     }
   
-  /*News*/
+  /*----  News  ----*/
   
-    .novedades{
+    .novelty{
       padding: 4% 4% 2% 4%;
     }
-    .nove{
+    .new{
       width: 500px;
       padding: 0%;
     }
 
-  /*Footer*/
+  /*----  Footer  -----------------------------------------------------------*/
   
     footer {
       padding: 1% 5%;
@@ -163,7 +163,7 @@
       margin-top: 40px;
     }
   
-    .rede{
+    .social{
       display: inline-block;
       width: 20%;
       padding-top: 1em;
@@ -171,7 +171,7 @@
       margin-top: 40px;
     }
     
-    .aa{
+    .icons{
       margin: 0px 4% 0px 4%;
       width: 1em;
     }
